@@ -20,7 +20,6 @@ package org.apache.pinot.broker.requesthandler;
 
 import com.google.common.annotations.VisibleForTesting;
 import com.google.common.base.Preconditions;
-import java.util.Collections;
 import java.util.List;
 import java.util.concurrent.TimeUnit;
 import java.util.concurrent.atomic.AtomicInteger;
@@ -38,17 +37,15 @@ import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
 
-/**
- * This class helps limit the number of multi-stage queries being executed concurrently. Note that the cluster
- * configuration is a "per server" value and the broker currently computes the max server query threads as
- * <em>CONFIG_OF_MULTI_STAGE_ENGINE_MAX_SERVER_QUERY_THREADS * numServers / numBrokers</em>. Note that the config value,
- * number of servers, and number of brokers are all dynamically updated here.
- * <p>
- * Another assumption made here is that queries are evenly distributed across brokers.
- * <p>
- * This is designed to limit the number of multi-stage queries being concurrently executed across a cluster and is not
- * intended to prevent individual large queries from being executed.
- */
+/// This class helps limit the number of multi-stage queries being executed concurrently. Note that the cluster
+/// configuration is a "per server" value and the broker currently computes the max server query threads as
+/// _CONFIG_OF_MULTI_STAGE_ENGINE_MAX_SERVER_QUERY_THREADS \* numServers / numBrokers_. Note that the config
+/// value, number of servers, and number of brokers are all dynamically updated here.
+///
+/// Another assumption made here is that queries are evenly distributed across brokers.
+///
+/// This is designed to limit the number of multi-stage queries being concurrently executed across a cluster and is not
+/// intended to prevent individual large queries from being executed.
 public class MultiStageQueryThrottler implements ClusterChangeHandler {
 
   private static final Logger LOGGER = LoggerFactory.getLogger(MultiStageQueryThrottler.class);
@@ -56,10 +53,8 @@ public class MultiStageQueryThrottler implements ClusterChangeHandler {
   private final int _maxServerQueryThreadsFromBrokerConfig;
   private final QueryThreadExceedStrategy _exceedStrategy;
   private final AtomicInteger _currentQueryServerThreads = new AtomicInteger();
-  /**
-   * If _maxServerQueryThreads is <= 0, it means that the cluster is not configured to limit the number of multi-stage
-   * queries that can be executed concurrently. In this case, we should not block the query.
-   */
+  /// If \_maxServerQueryThreads is <= 0, it means that the cluster is not configured to limit the number of multi-stage
+  /// queries that can be executed concurrently. In this case, we should not block the query.
   private int _maxServerQueryThreads;
   private int _numBrokers;
   private int _numServers;
@@ -111,21 +106,19 @@ public class MultiStageQueryThrottler implements ClusterChangeHandler {
     }
   }
 
-  /**
-   * Returns true if the query can be executed (waiting until it can be executed if necessary), false otherwise.
-   * <p>
-   * {@link #release(int)} should be called after the query is done executing. It is the responsibility of the caller to
-   * ensure that {@link #release(int)} is called exactly once for each call to this method.
-   *
-   * @param numQueryThreads the estimated number of query server threads
-   * @param timeout the maximum time to wait
-   * @param unit the time unit of the timeout argument
-   *
-   * @throws InterruptedException if the current thread is interrupted
-   * @throws RuntimeException if the query can never be dispatched due to the number of estimated query server threads
-   * being greater than the maximum number of server query threads calculated on the basis of
-   * <em>CONFIG_OF_MULTI_STAGE_ENGINE_MAX_SERVER_QUERY_THREADS * numServers / numBrokers</em>
-   */
+  /// Returns true if the query can be executed (waiting until it can be executed if necessary), false otherwise.
+  ///
+  /// [#release(int)] should be called after the query is done executing. It is the responsibility of the caller
+  /// to ensure that [#release(int)] is called exactly once for each call to this method.
+  ///
+  /// @param numQueryThreads the estimated number of query server threads
+  /// @param timeout the maximum time to wait
+  /// @param unit the time unit of the timeout argument
+  ///
+  /// @throws InterruptedException if the current thread is interrupted
+  /// @throws RuntimeException if the query can never be dispatched due to the number of estimated query server threads
+  /// being greater than the maximum number of server query threads calculated on the basis of
+  /// _CONFIG_OF_MULTI_STAGE_ENGINE_MAX_SERVER_QUERY_THREADS \* numServers / numBrokers_
   public boolean tryAcquire(int numQueryThreads, long timeout, TimeUnit unit)
       throws InterruptedException {
     if (_maxServerQueryThreads <= 0) {
@@ -163,10 +156,8 @@ public class MultiStageQueryThrottler implements ClusterChangeHandler {
     }
   }
 
-  /**
-   * Should be called after the query is done executing. It is the responsibility of the caller to ensure that this
-   * method is called exactly once for each call to {@link #tryAcquire(int, long, TimeUnit)}.
-   */
+  /// Should be called after the query is done executing. It is the responsibility of the caller to ensure that this
+  /// method is called exactly once for each call to [#tryAcquire(int, long, TimeUnit)].
   public void release(int numQueryThreads) {
     _currentQueryServerThreads.addAndGet(-1 * numQueryThreads);
     if (_maxServerQueryThreads > 0 && _exceedStrategy == QueryThreadExceedStrategy.WAIT) {
@@ -236,7 +227,7 @@ public class MultiStageQueryThrottler implements ClusterChangeHandler {
       return _maxServerQueryThreadsFromBrokerConfig;
     }
     return Integer.parseInt(_helixAdmin.getConfig(_helixConfigScope,
-        Collections.singletonList(CommonConstants.Helix.CONFIG_OF_MULTI_STAGE_ENGINE_MAX_SERVER_QUERY_THREADS))
+        List.of(CommonConstants.Helix.CONFIG_OF_MULTI_STAGE_ENGINE_MAX_SERVER_QUERY_THREADS))
         .getOrDefault(CommonConstants.Helix.CONFIG_OF_MULTI_STAGE_ENGINE_MAX_SERVER_QUERY_THREADS,
             CommonConstants.Helix.DEFAULT_MULTI_STAGE_ENGINE_MAX_SERVER_QUERY_THREADS));
   }
