@@ -21,7 +21,6 @@ package org.apache.pinot.broker.routing.instanceselector;
 import com.google.common.annotations.VisibleForTesting;
 import java.time.Clock;
 import java.util.ArrayList;
-import java.util.Collections;
 import java.util.HashMap;
 import java.util.HashSet;
 import java.util.List;
@@ -82,6 +81,14 @@ import static org.apache.pinot.spi.utils.CommonConstants.Broker.FALLBACK_POOL_ID
 /// creation time more than 5 minutes ago).
 /// TODO: refresh new/old segment state where there is no update from helix for long time.
 ///
+/// Alongside the selection state, this class maintains a [TableReplicaHealth] describing how well the
+/// table's segments are replicated across the instances it can route to, exposed through
+/// [#getReplicaHealth()]. Because it is derived from what routing can actually use, it accounts for both
+/// external view divergence and disabled instances, and for the replica groups that
+/// [ReplicaGroupInstanceSelector] takes out of service wholesale. Measuring it here and reporting it in
+/// [org.apache.pinot.broker.routing.manager.BaseBrokerRoutingManager] is deliberate: a selector cannot
+/// tell whether it covers the whole table or a sampled subset of it, and only the routing manager knows
+/// which one owns the table's gauges.
 public abstract class BaseInstanceSelector implements InstanceSelector {
   private static final Logger LOGGER = LoggerFactory.getLogger(BaseInstanceSelector.class);
   // To prevent int overflow, reset the request id once it reaches this value
@@ -106,9 +113,19 @@ public abstract class BaseInstanceSelector implements InstanceSelector {
   // Reduce this map to reduce garbage
   protected final Map<String, List<SegmentInstanceCandidate>> _oldSegmentCandidatesMap = new HashMap<>();
   protected Map<String, NewSegmentState> _newSegmentStateMap;
+  /// Number of ONLINE/CONSUMING instances in the ideal state, for old segments that have fewer
+  /// candidates than that. Only used for metrics
+  ///
+  /// Kept sparse deliberately: an absent entry means "as many candidates as the ideal state assigns",
+  /// so a healthy table stores nothing here. Read it through [#getExpectedReplicas].
+  protected final Map<String, Integer> _oldSegmentExpectedReplicasMap = new HashMap<>();
 
   // _segmentStates is needed for instance selection (multi-threaded), so it is made volatile.
   protected volatile SegmentStates _segmentStates;
+  // Published together with _segmentStates and read back by the routing manager to report the table's
+  // gauges. Volatile so that a reader on another thread cannot see it lagging the segment states it was
+  // computed alongside.
+  protected volatile TableReplicaHealth _replicaHealth;
   protected Map<String, ServerInstance> _enabledServerStore;
 
   @Override
@@ -145,16 +162,49 @@ public abstract class BaseInstanceSelector implements InstanceSelector {
     refreshSegmentStates();
   }
 
-  /**
-   * Returns whether the instance state is online for routing purpose (ONLINE/CONSUMING).
-   */
+  /// Returns how well the table's segments are currently replicated across the instances this selector
+  /// can route to. Never null once [#init] has run.
+  @Override
+  public TableReplicaHealth getReplicaHealth() {
+    return _replicaHealth;
+  }
+
+  /// Returns the number of instances the ideal state assigns to the given old segment in an
+  /// ONLINE/CONSUMING state. See [#_oldSegmentExpectedReplicasMap] for why this is stored sparsely.
+  private int getExpectedReplicas(String segment, int numCandidates) {
+    return Math.max(1, _oldSegmentExpectedReplicasMap.getOrDefault(segment, numCandidates));
+  }
+
+  /// Records an old segment's candidates, along with the ideal-state replica count the replica health needs
+  /// that the candidate list does not preserve. The single entry point for both structures, so that they
+  /// cannot fall out of step.
+  protected void putOldSegment(String segment, List<SegmentInstanceCandidate> candidates,
+      Map<String, String> idealStateInstanceStateMap) {
+    _oldSegmentCandidatesMap.put(segment, candidates);
+    // Stored only when it differs from the candidate count, see _oldSegmentExpectedReplicasMap
+    int numIdealStateReplicas = getNumInstancesOnlineForRouting(idealStateInstanceStateMap);
+    if (numIdealStateReplicas > candidates.size()) {
+      _oldSegmentExpectedReplicasMap.put(segment, numIdealStateReplicas);
+    }
+  }
+
+  /// Returns the number of instances in the given ideal state assignment that are ONLINE/CONSUMING.
+  protected static int getNumInstancesOnlineForRouting(Map<String, String> idealStateInstanceStateMap) {
+    int numOnlineForRouting = 0;
+    for (String state : idealStateInstanceStateMap.values()) {
+      if (isOnlineForRouting(state)) {
+        numOnlineForRouting++;
+      }
+    }
+    return numOnlineForRouting;
+  }
+
+  /// Returns whether the instance state is online for routing purpose (ONLINE/CONSUMING).
   static boolean isOnlineForRouting(@Nullable String state) {
     return SegmentStateModel.ONLINE.equals(state) || SegmentStateModel.CONSUMING.equals(state);
   }
 
-  /**
-   * Returns a map from new segment to their creation time based on the ZK metadata.
-   */
+  /// Returns a map from new segment to their creation time based on the ZK metadata.
   Map<String, Long> getNewSegmentCreationTimeMapFromZK(IdealState idealState, ExternalView externalView,
       Set<String> onlineSegments) {
     List<String> potentialNewSegments = new ArrayList<>();
@@ -191,12 +241,10 @@ public abstract class BaseInstanceSelector implements InstanceSelector {
     return newSegmentCreationTimeMap;
   }
 
-  /**
-   * Returns whether a segment is qualified as a new segment.
-   * A segment is count as old when:
-   * - Any instance for the segment is in ERROR state
-   * - External view for the segment converges with ideal state
-   */
+  /// Returns whether a segment is qualified as a new segment.
+  /// A segment is count as old when:
+  /// - Any instance for the segment is in ERROR state
+  /// - External view for the segment converges with ideal state
   static boolean isPotentialNewSegment(Map<String, String> idealStateInstanceStateMap,
       @Nullable Map<String, String> externalViewInstanceStateMap) {
     if (externalViewInstanceStateMap == null) {
@@ -217,9 +265,7 @@ public abstract class BaseInstanceSelector implements InstanceSelector {
     return !hasConverged;
   }
 
-  /**
-   * Returns the online instances for routing purpose.
-   */
+  /// Returns the online instances for routing purpose.
   static TreeSet<String> getOnlineInstances(Map<String, String> idealStateInstanceStateMap,
       Map<String, String> externalViewInstanceStateMap) {
     TreeSet<String> onlineInstances = new TreeSet<>();
@@ -234,9 +280,7 @@ public abstract class BaseInstanceSelector implements InstanceSelector {
     return onlineInstances;
   }
 
-  /**
-   * Converts the given map into a sorted map if needed.
-   */
+  /// Converts the given map into a sorted map if needed.
   static SortedMap<String, String> convertToSortedMap(Map<String, String> map) {
     if (map instanceof SortedMap) {
       return (SortedMap<String, String>) map;
@@ -246,13 +290,14 @@ public abstract class BaseInstanceSelector implements InstanceSelector {
   }
 
   /// Updates the segment maps based on the given ideal state, external view, online segments (segments with
-  /// ONLINE/CONSUMING instances in the ideal state and pre-selected by the {@code SegmentPreSelector}) and new
+  /// ONLINE/CONSUMING instances in the ideal state and pre-selected by the `SegmentPreSelector`) and new
   /// segments. After this update:
   /// - Old segments' online instances should be tracked in _oldSegmentCandidatesMap
   /// - New segments' state (creation time and candidate instances) should be tracked in _newSegmentStateMap
   void updateSegmentMaps(IdealState idealState, ExternalView externalView, Set<String> onlineSegments,
       Map<String, Long> newSegmentCreationTimeMap) {
     _oldSegmentCandidatesMap.clear();
+    _oldSegmentExpectedReplicasMap.clear();
     _newSegmentStateMap = new HashMap<>(HashUtil.getHashMapCapacity(newSegmentCreationTimeMap.size()));
 
     Map<String, Map<String, String>> idealStateAssignment = idealState.getRecord().getMapFields();
@@ -281,7 +326,7 @@ public abstract class BaseInstanceSelector implements InstanceSelector {
           _newSegmentStateMap.put(segment, new NewSegmentState(newSegmentCreationTimeMs, candidates));
         } else {
           // Old segment
-          _oldSegmentCandidatesMap.put(segment, Collections.emptyList());
+          putOldSegment(segment, List.of(), idealStateInstanceStateMap);
         }
       } else {
         TreeSet<String> onlineInstances = getOnlineInstances(idealStateInstanceStateMap, externalViewInstanceStateMap);
@@ -309,7 +354,7 @@ public abstract class BaseInstanceSelector implements InstanceSelector {
             }
             idealStateReplicaId++;
           }
-          _oldSegmentCandidatesMap.put(segment, candidates);
+          putOldSegment(segment, candidates, idealStateInstanceStateMap);
         }
       }
       if (_emitSinglePoolSegmentsMetric) {
@@ -331,21 +376,34 @@ public abstract class BaseInstanceSelector implements InstanceSelector {
     }
   }
 
-  /**
-   * Refreshes the _segmentStates based on the in-memory states.
-   * Note that the whole _segmentStates has to be updated together to avoid partial state update.
-   **/
+  /// Refreshes the \_segmentStates based on the in-memory states.
+  /// Note that the whole \_segmentStates has to be updated together to avoid partial state update.
   void refreshSegmentStates() {
     Map<String, List<SegmentInstanceCandidate>> instanceCandidatesMap =
         new HashMap<>(HashUtil.getHashMapCapacity(_oldSegmentCandidatesMap.size() + _newSegmentStateMap.size()));
     Set<String> servingInstances = new HashSet<>();
     Set<String> unavailableSegments = new HashSet<>();
+    int minPercentOfReplicas = TableReplicaHealth.FULLY_REPLICATED_PERCENT;
+    // Segments seen at exactly minPercentOfReplicas so far. Reset whenever a lower percentage displaces the
+    // minimum, so that the pair published below always describes the same population.
+    int numSegmentsAtMinPercentOfReplicas = 0;
 
     for (Map.Entry<String, List<SegmentInstanceCandidate>> entry : _oldSegmentCandidatesMap.entrySet()) {
       String segment = entry.getKey();
       List<SegmentInstanceCandidate> candidates = entry.getValue();
       List<SegmentInstanceCandidate> enabledCandidates =
           getEnabledCandidatesAndAddToServingInstances(candidates, servingInstances);
+      int expectedReplicas = getExpectedReplicas(segment, candidates.size());
+      int servingReplicas = enabledCandidates.size();
+      if (TableReplicaHealth.shouldMeasure(expectedReplicas)) {
+        int percentOfReplicas = TableReplicaHealth.toPercent(servingReplicas, expectedReplicas);
+        if (percentOfReplicas < minPercentOfReplicas) {
+          minPercentOfReplicas = percentOfReplicas;
+          numSegmentsAtMinPercentOfReplicas = 1;
+        } else if (percentOfReplicas == minPercentOfReplicas) {
+          numSegmentsAtMinPercentOfReplicas++;
+        }
+      }
       if (!enabledCandidates.isEmpty()) {
         instanceCandidatesMap.put(segment, enabledCandidates);
       } else {
@@ -382,6 +440,8 @@ public abstract class BaseInstanceSelector implements InstanceSelector {
     }
 
     _segmentStates = new SegmentStates(instanceCandidatesMap, servingInstances, unavailableSegments);
+    _replicaHealth = new TableReplicaHealth(minPercentOfReplicas, numSegmentsAtMinPercentOfReplicas,
+        unavailableSegments.size());
   }
 
   private List<SegmentInstanceCandidate> getEnabledCandidatesAndAddToServingInstances(
@@ -397,23 +457,19 @@ public abstract class BaseInstanceSelector implements InstanceSelector {
     return enabledCandidates;
   }
 
-  /**
-   * {@inheritDoc}
-   *
-   * <p>Updates the cached enabled instances and re-calculates {@link #_segmentStates}.
-   */
+  /// {@inheritDoc}
+  ///
+  /// Updates the cached enabled instances and re-calculates [#_segmentStates].
   @Override
   public void onInstancesChange(Set<String> enabledInstances, List<String> changedInstances) {
     _enabledInstances = enabledInstances;
     refreshSegmentStates();
   }
 
-  /**
-   * {@inheritDoc}
-   *
-   * <p>Updates the cached maps ({@link #_oldSegmentCandidatesMap} and {@link #_newSegmentStateMap}, and re-calculates
-   * {@link #_segmentStates} based on the cached states.
-   */
+  /// {@inheritDoc}
+  ///
+  /// Updates the cached maps ([#_oldSegmentCandidatesMap] and [#_newSegmentStateMap], and re-calculates
+  /// [#_segmentStates] based on the cached states.
   @Override
   public void onAssignmentChange(IdealState idealState, ExternalView externalView, Set<String> onlineSegments) {
     Map<String, Long> newSegmentCreationTimeMap =
@@ -422,9 +478,7 @@ public abstract class BaseInstanceSelector implements InstanceSelector {
     refreshSegmentStates();
   }
 
-  /**
-   * Returns a map from new segment to their creation time based on the existing in-memory states.
-   */
+  /// Returns a map from new segment to their creation time based on the existing in-memory states.
   Map<String, Long> getNewSegmentCreationTimeMapFromExistingStates(IdealState idealState, ExternalView externalView,
       Set<String> onlineSegments) {
     Map<String, Long> newSegmentCreationTimeMap = new HashMap<>();
@@ -461,7 +515,7 @@ public abstract class BaseInstanceSelector implements InstanceSelector {
   public SelectionResult select(BrokerRequest brokerRequest, List<String> segments, long requestId) {
     Map<String, String> queryOptions =
         (brokerRequest.getPinotQuery() != null && brokerRequest.getPinotQuery().getQueryOptions() != null)
-            ? brokerRequest.getPinotQuery().getQueryOptions() : Collections.emptyMap();
+            ? brokerRequest.getPinotQuery().getQueryOptions() : Map.of();
     int requestIdInt = (int) (requestId % MAX_REQUEST_ID);
     // Copy the volatile reference so that segmentToInstanceMap and unavailableSegments can have a consistent view of
     // the state.
@@ -471,7 +525,7 @@ public abstract class BaseInstanceSelector implements InstanceSelector {
     Set<String> unavailableSegments = segmentStates.getUnavailableSegments();
 
     if (unavailableSegments.isEmpty()) {
-      return new SelectionResult(segmentToInstanceMap, Collections.emptyList(), 0);
+      return new SelectionResult(segmentToInstanceMap, List.of(), 0);
     } else {
       List<String> unavailableSegmentsForRequest = new ArrayList<>();
       for (String segment : segments) {
@@ -501,12 +555,10 @@ public abstract class BaseInstanceSelector implements InstanceSelector {
     return pool;
   }
 
-  /**
-   * Selects the server instances for the given segments based on the request id and segment states. Returns two maps
-   * from segment to selected server instance hosting the segment. The 2nd map is for optional segments. The optional
-   * segments are used to get the new segments that are not online yet. Instead of simply skipping them by broker at
-   * routing time, we can send them to servers and let servers decide how to handle them.
-   */
+  /// Selects the server instances for the given segments based on the request id and segment states. Returns two maps
+  /// from segment to selected server instance hosting the segment. The 2nd map is for optional segments. The optional
+  /// segments are used to get the new segments that are not online yet. Instead of simply skipping them by broker at
+  /// routing time, we can send them to servers and let servers decide how to handle them.
   protected abstract Pair<Map<String, String>, Map<String, String>/*optional segments*/> select(List<String> segments,
       int requestId, SegmentStates segmentStates, Map<String, String> queryOptions);
 }
