@@ -19,16 +19,13 @@
 package org.apache.pinot.client.admin;
 
 import com.fasterxml.jackson.databind.JsonNode;
-import java.util.Collections;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
 import javax.annotation.Nullable;
 
-/**
- * Base class for controller admin clients backed by a shared {@link PinotAdminTransport}.
- * Implementations are thread-safe as long as the parent {@link PinotAdminClient} remains open.
- */
+/// Base class for controller admin clients backed by a shared [PinotAdminTransport].
+/// Implementations are thread-safe as long as the parent [PinotAdminClient] remains open.
 abstract class BaseServiceAdminClient {
   protected final PinotAdminTransport _transport;
   protected final String _controllerAddress;
@@ -67,7 +64,7 @@ abstract class BaseServiceAdminClient {
     try {
       return PinotAdminTransport.parseStringArrayNode(node);
     } catch (PinotAdminException e) {
-      return Collections.emptyList();
+      return List.of();
     }
   }
 }
