@@ -25,7 +25,6 @@ import it.unimi.dsi.fastutil.objects.Object2LongOpenCustomHashMap;
 import it.unimi.dsi.fastutil.objects.Object2ObjectOpenCustomHashMap;
 import java.util.ArrayList;
 import java.util.Arrays;
-import java.util.Collections;
 import java.util.Comparator;
 import java.util.List;
 import java.util.Map;
@@ -38,7 +37,6 @@ import javax.annotation.concurrent.ThreadSafe;
 import org.apache.commons.collections4.CollectionUtils;
 import org.apache.commons.lang3.tuple.Pair;
 import org.apache.pinot.common.metadata.segment.SegmentZKMetadata;
-import org.apache.pinot.core.data.manager.provider.TableDataManagerProvider;
 import org.apache.pinot.segment.local.data.manager.SegmentDataManager;
 import org.apache.pinot.segment.local.segment.readers.PinotSegmentRecordReader;
 import org.apache.pinot.segment.spi.ImmutableSegment;
@@ -51,15 +49,13 @@ import org.apache.pinot.spi.data.readers.GenericRow;
 import org.apache.pinot.spi.data.readers.PrimaryKey;
 
 
-/**
- * Dimension Table is a special type of OFFLINE table which is assigned to all servers
- * in a tenant and is used to execute a LOOKUP Transform Function. DimensionTableDataManager
- * loads the contents into a HashMap for faster access thus the size should be small
- * enough to easily fit in memory.
- *
- * DimensionTableDataManager uses Registry of Singletons pattern to store one instance per table
- * which can be accessed via {@link #getInstanceByTableName} static method.
- */
+/// Dimension Table is a special type of OFFLINE table which is assigned to all servers
+/// in a tenant and is used to execute a LOOKUP Transform Function. DimensionTableDataManager
+/// loads the contents into a HashMap for faster access thus the size should be small
+/// enough to easily fit in memory.
+///
+/// DimensionTableDataManager uses Registry of Singletons pattern to store one instance per table
+/// which can be accessed via [#getInstanceByTableName] static method.
 @ThreadSafe
 public class DimensionTableDataManager extends OfflineTableDataManager {
 
@@ -80,10 +76,9 @@ public class DimensionTableDataManager extends OfflineTableDataManager {
   protected DimensionTableDataManager() {
   }
 
-  /**
-   * `createInstanceByTableName` should only be used by the {@link TableDataManagerProvider} and the returned
-   * instance should be properly initialized via {@link #init} method before using.
-   */
+  /// `createInstanceByTableName` should only be used by the
+  /// [org.apache.pinot.core.data.manager.provider.TableDataManagerProvider] and the returned instance should
+  /// be properly initialized via [#init] method before using.
   public static DimensionTableDataManager createInstanceByTableName(String tableNameWithType) {
     return INSTANCES.computeIfAbsent(tableNameWithType, k -> new DimensionTableDataManager());
   }
@@ -131,8 +126,8 @@ public class DimensionTableDataManager extends OfflineTableDataManager {
       lookupTable.defaultReturnValue(Long.MIN_VALUE);
 
       _dimensionTable.set(
-          new MemoryOptimizedDimensionTable(schema, primaryKeyColumns, lookupTable, Collections.emptyList(),
-              Collections.emptyList(), this));
+          new MemoryOptimizedDimensionTable(schema, primaryKeyColumns, lookupTable, List.of(),
+              List.of(), this));
     } else {
       List<String> valueColumns = getValueColumns(schema.getColumnNames(), primaryKeyColumns);
 
@@ -188,9 +183,7 @@ public class DimensionTableDataManager extends OfflineTableDataManager {
     }
   }
 
-  /**
-   * `loadLookupTable()` reads contents of the DimensionTable into _lookupTable HashMap for fast lookup.
-   */
+  /// `loadLookupTable()` reads contents of the DimensionTable into \_lookupTable HashMap for fast lookup.
   private boolean loadLookupTable() {
     DimensionTable dimensionTable =
         _disablePreload ? createMemOptimisedDimensionTable() : createFastLookupDimensionTable();
