@@ -19,11 +19,11 @@
 package org.apache.pinot.core.segment.processing.framework;
 
 import com.google.common.base.Preconditions;
-import java.util.Collections;
 import java.util.List;
 import java.util.Map;
 import java.util.function.Consumer;
 import javax.annotation.Nullable;
+import org.apache.pinot.core.segment.processing.aggregator.ValueAggregatorFactory;
 import org.apache.pinot.core.segment.processing.partitioner.PartitionerConfig;
 import org.apache.pinot.core.segment.processing.timehandler.TimeHandler;
 import org.apache.pinot.core.segment.processing.timehandler.TimeHandlerConfig;
@@ -34,9 +34,7 @@ import org.apache.pinot.spi.data.Schema;
 import org.apache.pinot.spi.utils.TimestampIndexUtils;
 
 
-/**
- * Config for configuring the phases of {@link SegmentProcessorFramework}
- */
+/// Config for configuring the phases of [SegmentProcessorFramework]
 public class SegmentProcessorConfig {
   private static final MergeType DEFAULT_MERGE_TYPE = MergeType.CONCAT;
 
@@ -74,58 +72,58 @@ public class SegmentProcessorConfig {
     _customCreationTime = customCreationTime;
   }
 
-  /**
-   * The Pinot table config
-   */
+  /// The Pinot table config
   public TableConfig getTableConfig() {
     return _tableConfig;
   }
 
-  /**
-   * The Pinot schema
-   */
+  /// The Pinot schema
   public Schema getSchema() {
     return _schema;
   }
 
-  /**
-   * The time handler config for the SegmentProcessorFramework
-   */
+  /// The time handler config for the SegmentProcessorFramework
   public TimeHandlerConfig getTimeHandlerConfig() {
     return _timeHandlerConfig;
   }
 
-  /**
-   * The PartitioningConfig for the SegmentProcessorFramework's map phase
-   */
+  /// The PartitioningConfig for the SegmentProcessorFramework's map phase
   public List<PartitionerConfig> getPartitionerConfigs() {
     return _partitionerConfigs;
   }
 
-  /**
-   * The merge type for the SegmentProcessorFramework
-   */
+  /// The merge type for the SegmentProcessorFramework
   public MergeType getMergeType() {
     return _mergeType;
   }
 
-  /**
-   * The aggregator types for the SegmentProcessorFramework's reduce phase with ROLLUP merge type
-   */
+  /// The aggregator types for the SegmentProcessorFramework's reduce phase with ROLLUP merge type
   public Map<String, AggregationFunctionType> getAggregationTypes() {
     return _aggregationTypes;
   }
 
-  /**
-   * The aggregation function parameters for the SegmentProcessorFramework's reduce phase with ROLLUP merge type
-   */
+  /// The aggregation function parameters for the SegmentProcessorFramework's reduce phase with ROLLUP merge type
   public Map<String, Map<String, String>> getAggregationFunctionParameters() {
     return _aggregationFunctionParameters;
   }
 
-  /**
-   * The SegmentConfig for the SegmentProcessorFramework's reduce phase
-   */
+  /// Returns whether the rollup requires the original (pre-rounding) time values to be preserved as an extra sort
+  /// field in the intermediate files. This is the case when any of the configured aggregation types is order
+  /// sensitive (FIRSTWITHTIME/LASTWITHTIME), which picks the value based on the original time order instead of
+  /// combining the values.
+  public boolean requiresOriginalTimeOrdering() {
+    if (_mergeType != MergeType.ROLLUP || _timeHandlerConfig.getType() == TimeHandler.Type.NO_OP) {
+      return false;
+    }
+    for (AggregationFunctionType aggregationType : _aggregationTypes.values()) {
+      if (ValueAggregatorFactory.requiresTimeOrdering(aggregationType)) {
+        return true;
+      }
+    }
+    return false;
+  }
+
+  /// The SegmentConfig for the SegmentProcessorFramework's reduce phase
   public SegmentConfig getSegmentConfig() {
     return _segmentConfig;
   }
@@ -150,9 +148,7 @@ public class SegmentProcessorConfig {
         + ", _segmentNameGenerator=" + _segmentNameGenerator + ", _customCreationTime=" + _customCreationTime + '}';
   }
 
-  /**
-   * Builder for SegmentProcessorConfig
-   */
+  /// Builder for SegmentProcessorConfig
   public static class Builder {
     private TableConfig _tableConfig;
     private Schema _schema;
@@ -229,16 +225,16 @@ public class SegmentProcessorConfig {
         _timeHandlerConfig = new TimeHandlerConfig.Builder(TimeHandler.Type.NO_OP).build();
       }
       if (_partitionerConfigs == null) {
-        _partitionerConfigs = Collections.emptyList();
+        _partitionerConfigs = List.of();
       }
       if (_mergeType == null) {
         _mergeType = DEFAULT_MERGE_TYPE;
       }
       if (_aggregationTypes == null) {
-        _aggregationTypes = Collections.emptyMap();
+        _aggregationTypes = Map.of();
       }
       if (_aggregationFunctionParameters == null) {
-        _aggregationFunctionParameters = Collections.emptyMap();
+        _aggregationFunctionParameters = Map.of();
       }
       if (_segmentConfig == null) {
         _segmentConfig = new SegmentConfig.Builder().build();
