@@ -20,7 +20,6 @@ package org.apache.pinot.core.query.executor;
 
 import java.util.ArrayList;
 import java.util.Arrays;
-import java.util.Collections;
 import java.util.List;
 import org.apache.pinot.common.exception.TableNotFoundException;
 import org.apache.pinot.core.data.manager.DuoSegmentDataManager;
@@ -48,12 +47,10 @@ public class SingleTableExecutionInfoTest {
 
   private static final String TABLE_NAME_WITH_TYPE = "testTable_REALTIME";
 
-  /**
-   * For a {@link DuoSegmentDataManager}, both the primary (immutable) segment and the secondary (mutable) segment
-   * must appear in the index segment list used for query execution. The primary segment alone is not enough — a
-   * mutable consuming segment continues to receive rows after the immutable was committed, and those rows must
-   * still be queryable for the duration of the duo window.
-   */
+  /// For a [DuoSegmentDataManager], both the primary (immutable) segment and the secondary (mutable) segment
+  /// must appear in the index segment list used for query execution. The primary segment alone is not enough — a
+  /// mutable consuming segment continues to receive rows after the immutable was committed, and those rows must
+  /// still be queryable for the duration of the duo window.
   @Test
   public void testCreateExpandsDuoSegmentDataManagerForNonUpsertTable()
       throws TableNotFoundException {
@@ -85,11 +82,9 @@ public class SingleTableExecutionInfoTest {
     assertEquals(info.getNumSegmentsAcquired(), 2);
   }
 
-  /**
-   * When a {@link DuoSegmentDataManager}'s secondary segment has been released (refCount=0),
-   * {@link DuoSegmentDataManager#getSegments()} only returns the live primary segment. The execution info should
-   * include just that one segment for the duo manager — no nulls, no stale references.
-   */
+  /// When a [DuoSegmentDataManager]'s secondary segment has been released (refCount=0),
+  /// [DuoSegmentDataManager#getSegments()] only returns the live primary segment. The execution info should
+  /// include just that one segment for the duo manager — no nulls, no stale references.
   @Test
   public void testCreateExpandsDuoSegmentDataManagerWithReleasedSecondary()
       throws TableNotFoundException {
@@ -101,20 +96,18 @@ public class SingleTableExecutionInfoTest {
     DuoSegmentDataManager duo = new DuoSegmentDataManager(primary, secondary);
 
     InstanceDataManager instanceDataManager =
-        mockInstanceDataManager(Collections.singletonList(duo), /*isUpsertEnabled=*/ false);
+        mockInstanceDataManager(List.of(duo), /*isUpsertEnabled=*/ false);
 
     SingleTableExecutionInfo info = SingleTableExecutionInfo.create(instanceDataManager, TABLE_NAME_WITH_TYPE,
-        Collections.singletonList("seg01"), null, mock(QueryContext.class));
+        List.of("seg01"), null, mock(QueryContext.class));
 
     List<IndexSegment> indexSegments = info.getIndexSegments();
     assertEquals(indexSegments.size(), 1);
     assertSame(indexSegments.get(0), primarySegment);
   }
 
-  /**
-   * Plain (non-duo) {@link SegmentDataManager} instances are still handled correctly: each one contributes
-   * exactly one segment to the index segment list, matching the pre-multi-segment behavior.
-   */
+  /// Plain (non-duo) [SegmentDataManager] instances are still handled correctly: each one contributes
+  /// exactly one segment to the index segment list, matching the pre-multi-segment behavior.
   @Test
   public void testCreateKeepsSingleSegmentBehaviorWhenNoMultiSegments()
       throws TableNotFoundException {
@@ -135,10 +128,8 @@ public class SingleTableExecutionInfoTest {
     assertSame(indexSegments.get(1), seg2);
   }
 
-  /**
-   * {@link SingleTableExecutionInfo#create} throws {@link TableNotFoundException} when the requested table
-   * is not registered with the instance data manager.
-   */
+  /// [SingleTableExecutionInfo#create] throws [TableNotFoundException] when the requested table
+  /// is not registered with the instance data manager.
   @Test
   public void testCreateThrowsTableNotFoundWhenTableMissing() {
     InstanceDataManager instanceDataManager = mock(InstanceDataManager.class);
@@ -146,7 +137,7 @@ public class SingleTableExecutionInfoTest {
 
     expectThrows(TableNotFoundException.class,
         () -> SingleTableExecutionInfo.create(instanceDataManager, TABLE_NAME_WITH_TYPE,
-            Collections.emptyList(), null, mock(QueryContext.class)));
+            List.of(), null, mock(QueryContext.class)));
   }
 
   private static InstanceDataManager mockInstanceDataManager(List<SegmentDataManager> acquired,
