@@ -21,7 +21,6 @@ package org.apache.pinot.integration.tests;
 import java.io.File;
 import java.io.IOException;
 import java.util.ArrayList;
-import java.util.Collections;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
@@ -45,16 +44,14 @@ import static org.testng.Assert.assertEquals;
 import static org.testng.Assert.assertTrue;
 
 
-/**
- * Integration tests for commit-time compaction feature in upsert tables.
- *
- * These tests validate that commit-time compaction correctly handles:
- * - Multi-value dictionary columns
- * - Mixed column configurations (dictionary vs no-dictionary)
- * - Inverted indexes
- * - Raw index writers
- * - Different data types
- */
+/// Integration tests for commit-time compaction feature in upsert tables.
+///
+/// These tests validate that commit-time compaction correctly handles:
+/// - Multi-value dictionary columns
+/// - Mixed column configurations (dictionary vs no-dictionary)
+/// - Inverted indexes
+/// - Raw index writers
+/// - Different data types
 public class CommitTimeCompactionIntegrationTest extends BaseClusterIntegrationTest {
   private static final String INPUT_DATA_SMALL_TAR_FILE = "gameScores_csv.tar.gz";
   private static final String CSV_SCHEMA_HEADER = "playerId,name,game,score,timestampInEpoch,deleted";
@@ -186,7 +183,7 @@ public class CommitTimeCompactionIntegrationTest extends BaseClusterIntegrationT
     TableConfig tableConfigWithCompaction =
         createCSVUpsertTableConfig(tableNameWithCompaction, kafkaTopicName, getNumKafkaPartitions(),
             csvDecoderProperties, upsertConfigWithCompaction, PRIMARY_KEY_COL);
-    tableConfigWithCompaction.getIndexingConfig().setSortedColumn(Collections.singletonList("score"));
+    tableConfigWithCompaction.getIndexingConfig().setSortedColumn(List.of("score"));
     tableConfigWithCompaction.getIndexingConfig().setColumnMajorSegmentBuilderEnabled(false);
     addTableConfig(tableConfigWithCompaction);
 
@@ -198,7 +195,7 @@ public class CommitTimeCompactionIntegrationTest extends BaseClusterIntegrationT
     TableConfig tableConfigWithoutCompaction =
         createCSVUpsertTableConfig(tableNameWithoutCompaction, kafkaTopicName, getNumKafkaPartitions(),
             csvDecoderProperties, upsertConfigWithoutCompaction, PRIMARY_KEY_COL);
-    tableConfigWithoutCompaction.getIndexingConfig().setSortedColumn(Collections.singletonList("score"));
+    tableConfigWithoutCompaction.getIndexingConfig().setSortedColumn(List.of("score"));
     tableConfigWithoutCompaction.getIndexingConfig().setColumnMajorSegmentBuilderEnabled(false);
     addTableConfig(tableConfigWithoutCompaction);
 
@@ -208,7 +205,7 @@ public class CommitTimeCompactionIntegrationTest extends BaseClusterIntegrationT
     TableConfig tableConfigWithCompactionAndColumnMajor =
         createCSVUpsertTableConfig(tableNameWithCompactionAndColumnMajor, kafkaTopicName, getNumKafkaPartitions(),
             csvDecoderProperties, upsertConfigWithCompaction, PRIMARY_KEY_COL);
-    tableConfigWithCompactionAndColumnMajor.getIndexingConfig().setSortedColumn(Collections.singletonList("score"));
+    tableConfigWithCompactionAndColumnMajor.getIndexingConfig().setSortedColumn(List.of("score"));
     tableConfigWithCompactionAndColumnMajor.getIndexingConfig().setColumnMajorSegmentBuilderEnabled(true);
     addTableConfig(tableConfigWithCompactionAndColumnMajor);
 
@@ -451,7 +448,7 @@ public class CommitTimeCompactionIntegrationTest extends BaseClusterIntegrationT
         .addMultiValueDimension("game", FieldSpec.DataType.STRING)  // Multi-value for UNION strategy
         .addSingleValueDimension("deleted", FieldSpec.DataType.BOOLEAN).addMetric("score", FieldSpec.DataType.FLOAT)
         .addDateTime("timestampInEpoch", FieldSpec.DataType.LONG, "1:MILLISECONDS:EPOCH", "1:MILLISECONDS")
-        .setPrimaryKeyColumns(Collections.singletonList("playerId"));
+        .setPrimaryKeyColumns(List.of("playerId"));
 
     // Create schema for partial upsert - make game multi-value to support UNION strategy
     String tableNameWithoutCompaction = "gameScoresPartialCompactionDisabled";
@@ -894,9 +891,7 @@ public class CommitTimeCompactionIntegrationTest extends BaseClusterIntegrationT
         .getResultSet(0).getLong(0, 0);
   }
 
-  /**
-   * Validates compaction efficiency metrics
-   */
+  /// Validates compaction efficiency metrics
   protected void validateCompactionEfficiency(long physicalCountCompacted, long physicalCountNormal,
       int minExpectedRemovedRecords, double maxCompressionRatio) {
     double compressionRatio = (double) physicalCountCompacted / physicalCountNormal;
