@@ -20,7 +20,6 @@ package org.apache.pinot.integration.tests;
 
 import java.io.File;
 import java.net.URL;
-import java.util.Collections;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
@@ -133,7 +132,7 @@ public class UrlAuthRealtimeIntegrationTest extends BaseClusterIntegrationTest {
     properties.put("bucketTimePeriod", "30d");
 
     return new TableTaskConfig(
-        Collections.singletonMap(MinionConstants.RealtimeToOfflineSegmentsTask.TASK_TYPE, properties));
+        Map.of(MinionConstants.RealtimeToOfflineSegmentsTask.TASK_TYPE, properties));
   }
 
   @Override
