@@ -21,7 +21,6 @@ package org.apache.pinot.integration.tests.custom;
 import com.fasterxml.jackson.databind.JsonNode;
 import java.io.File;
 import java.util.Arrays;
-import java.util.Collections;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
@@ -56,10 +55,8 @@ import static org.testng.Assert.assertNotNull;
 import static org.testng.Assert.assertTrue;
 
 
-/**
- * Integration test for RefreshSegmentTask minion task.
- * Tests segment refresh after index configuration changes.
- */
+/// Integration test for RefreshSegmentTask minion task.
+/// Tests segment refresh after index configuration changes.
 @Test(suiteName = "CustomClusterIntegrationTest")
 public class RefreshSegmentMinionTest extends CustomDataQueryClusterIntegrationTest {
 
@@ -135,13 +132,13 @@ public class RefreshSegmentMinionTest extends CustomDataQueryClusterIntegrationT
   public void testFirstSegmentRefresh() {
     String offlineTableName = TableNameBuilder.OFFLINE.tableNameWithType(getTableName());
     assertNotNull(getTaskManager().scheduleTasks(new TaskSchedulingContext()
-            .setTablesToSchedule(Collections.singleton(offlineTableName)))
+            .setTablesToSchedule(Set.of(offlineTableName)))
         .get(MinionConstants.RefreshSegmentTask.TASK_TYPE));
     assertTrue(getHelixTaskResourceManager().getTaskQueues()
         .contains(PinotHelixTaskResourceManager.getHelixJobQueueName(MinionConstants.RefreshSegmentTask.TASK_TYPE)));
     MinionTaskTestUtils.assertNoTaskSchedule(new TaskSchedulingContext()
-            .setTablesToSchedule(Collections.singleton(offlineTableName))
-            .setTasksToSchedule(Collections.singleton(MinionConstants.RefreshSegmentTask.TASK_TYPE)),
+            .setTablesToSchedule(Set.of(offlineTableName))
+            .setTasksToSchedule(Set.of(MinionConstants.RefreshSegmentTask.TASK_TYPE)),
         getTaskManager());
     waitForTaskToComplete();
 
@@ -155,8 +152,8 @@ public class RefreshSegmentMinionTest extends CustomDataQueryClusterIntegrationT
 
     // No-op: nothing changed, should not schedule
     MinionTaskTestUtils.assertNoTaskSchedule(new TaskSchedulingContext()
-            .setTablesToSchedule(Collections.singleton(offlineTableName))
-            .setTasksToSchedule(Collections.singleton(MinionConstants.RefreshSegmentTask.TASK_TYPE)),
+            .setTablesToSchedule(Set.of(offlineTableName))
+            .setTasksToSchedule(Set.of(MinionConstants.RefreshSegmentTask.TASK_TYPE)),
         getTaskManager());
     for (SegmentZKMetadata metadata : getSharedHelixResourceManager().getSegmentsZKMetadata(offlineTableName)) {
       Map<String, String> customMap = metadata.getCustomMap();
@@ -177,11 +174,11 @@ public class RefreshSegmentMinionTest extends CustomDataQueryClusterIntegrationT
     forceUpdateSchema(schema);
 
     assertNotNull(getTaskManager().scheduleTasks(new TaskSchedulingContext()
-            .setTablesToSchedule(Collections.singleton(offlineTableName)))
+            .setTablesToSchedule(Set.of(offlineTableName)))
         .get(MinionConstants.RefreshSegmentTask.TASK_TYPE));
     MinionTaskTestUtils.assertNoTaskSchedule(new TaskSchedulingContext()
-            .setTablesToSchedule(Collections.singleton(offlineTableName))
-            .setTasksToSchedule(Collections.singleton(MinionConstants.RefreshSegmentTask.TASK_TYPE)),
+            .setTablesToSchedule(Set.of(offlineTableName))
+            .setTasksToSchedule(Set.of(MinionConstants.RefreshSegmentTask.TASK_TYPE)),
         getTaskManager());
     waitForTaskToComplete();
 
@@ -225,11 +222,11 @@ public class RefreshSegmentMinionTest extends CustomDataQueryClusterIntegrationT
 
     String offlineTableName = TableNameBuilder.OFFLINE.tableNameWithType(getTableName());
     assertNotNull(getTaskManager().scheduleTasks(new TaskSchedulingContext()
-            .setTablesToSchedule(Collections.singleton(offlineTableName)))
+            .setTablesToSchedule(Set.of(offlineTableName)))
         .get(MinionConstants.RefreshSegmentTask.TASK_TYPE));
     MinionTaskTestUtils.assertNoTaskSchedule(new TaskSchedulingContext()
-            .setTablesToSchedule(Collections.singleton(offlineTableName))
-            .setTasksToSchedule(Collections.singleton(MinionConstants.RefreshSegmentTask.TASK_TYPE)),
+            .setTablesToSchedule(Set.of(offlineTableName))
+            .setTasksToSchedule(Set.of(MinionConstants.RefreshSegmentTask.TASK_TYPE)),
         getTaskManager());
     waitForTaskToComplete();
 
@@ -314,11 +311,11 @@ public class RefreshSegmentMinionTest extends CustomDataQueryClusterIntegrationT
 
     // Schedule refresh — should result in no actual changes since nothing changed
     assertNotNull(getTaskManager().scheduleTasks(new TaskSchedulingContext()
-            .setTablesToSchedule(Collections.singleton(offlineTableName)))
+            .setTablesToSchedule(Set.of(offlineTableName)))
         .get(MinionConstants.RefreshSegmentTask.TASK_TYPE));
     MinionTaskTestUtils.assertNoTaskSchedule(new TaskSchedulingContext()
-            .setTablesToSchedule(Collections.singleton(offlineTableName))
-            .setTasksToSchedule(Collections.singleton(MinionConstants.RefreshSegmentTask.TASK_TYPE)),
+            .setTablesToSchedule(Set.of(offlineTableName))
+            .setTasksToSchedule(Set.of(MinionConstants.RefreshSegmentTask.TASK_TYPE)),
         getTaskManager());
     waitForTaskToComplete();
 
@@ -345,11 +342,11 @@ public class RefreshSegmentMinionTest extends CustomDataQueryClusterIntegrationT
     forceUpdateSchema(schema);
 
     assertNotNull(getTaskManager().scheduleTasks(new TaskSchedulingContext()
-            .setTablesToSchedule(Collections.singleton(offlineTableName)))
+            .setTablesToSchedule(Set.of(offlineTableName)))
         .get(MinionConstants.RefreshSegmentTask.TASK_TYPE));
     MinionTaskTestUtils.assertNoTaskSchedule(new TaskSchedulingContext()
-            .setTablesToSchedule(Collections.singleton(offlineTableName))
-            .setTasksToSchedule(Collections.singleton(MinionConstants.RefreshSegmentTask.TASK_TYPE)),
+            .setTablesToSchedule(Set.of(offlineTableName))
+            .setTasksToSchedule(Set.of(MinionConstants.RefreshSegmentTask.TASK_TYPE)),
         getTaskManager());
     waitForTaskToComplete();
 
@@ -396,7 +393,7 @@ public class RefreshSegmentMinionTest extends CustomDataQueryClusterIntegrationT
   private TableTaskConfig getRefreshSegmentTaskConfig() {
     Map<String, String> tableTaskConfigs = new HashMap<>();
     return new TableTaskConfig(
-        Collections.singletonMap(MinionConstants.RefreshSegmentTask.TASK_TYPE, tableTaskConfigs));
+        Map.of(MinionConstants.RefreshSegmentTask.TASK_TYPE, tableTaskConfigs));
   }
 
   private TableTaskConfig getRefreshSegmentMetadataPushTaskConfig() {
@@ -404,6 +401,6 @@ public class RefreshSegmentMinionTest extends CustomDataQueryClusterIntegrationT
     tableTaskConfigs.put(BatchConfigProperties.PUSH_MODE, BatchConfigProperties.SegmentPushType.METADATA.name());
     tableTaskConfigs.put(MinionTaskUtils.ALLOW_METADATA_PUSH_WITH_LOCAL_FS, "true");
     return new TableTaskConfig(
-        Collections.singletonMap(MinionConstants.RefreshSegmentTask.TASK_TYPE, tableTaskConfigs));
+        Map.of(MinionConstants.RefreshSegmentTask.TASK_TYPE, tableTaskConfigs));
   }
 }
