@@ -34,6 +34,7 @@ import org.apache.pinot.common.utils.DataSchema.ColumnDataType;
 import org.apache.pinot.common.utils.config.QueryOptionsUtils;
 import org.apache.pinot.core.common.BlockValSet;
 import org.apache.pinot.core.query.aggregation.function.AggregationFunction;
+import org.apache.pinot.core.query.aggregation.function.AggregationFunctionUtils;
 import org.apache.pinot.core.query.aggregation.groupby.GroupByResultHolder;
 import org.apache.pinot.core.query.aggregation.groupby.GroupKeyGenerator;
 import org.apache.pinot.core.util.DataBlockExtractUtils;
@@ -48,9 +49,7 @@ import org.roaringbitmap.PeekableIntIterator;
 import org.roaringbitmap.RoaringBitmap;
 
 
-/**
- * Class that executes the keyed group by aggregations for the multistage AggregateOperator.
- */
+/// Class that executes the keyed group by aggregations for the multistage AggregateOperator.
 @SuppressWarnings({"rawtypes", "unchecked"})
 public class MultistageGroupByExecutor {
   private final int[] _groupKeyIds;
@@ -178,9 +177,7 @@ public class MultistageGroupByExecutor {
     return _numGroupsWarningLimit;
   }
 
-  /**
-   * Performs group-by aggregation for the data in the block.
-   */
+  /// Performs group-by aggregation for the data in the block.
   public void processBlock(MseBlock.Data block) {
     if (!_aggType.isInputIntermediateFormat()) {
       processAggregate(block);
@@ -189,13 +186,11 @@ public class MultistageGroupByExecutor {
     }
   }
 
-  /**
-   * Get aggregation result limited to first {@code maxRows} rows, ordered with {@code comparator}.
-   */
+  /// Get aggregation result limited to first `maxRows` rows, ordered with `comparator`.
   public List<Object[]> getResult(Comparator<Object[]> comparator, int maxRows) {
     int numGroups = Math.min(_groupIdGenerator.getNumGroups(), maxRows);
     if (numGroups == 0) {
-      return Collections.emptyList();
+      return List.of();
     }
 
     // TODO: Change it to use top-K algorithm
@@ -235,11 +230,11 @@ public class MultistageGroupByExecutor {
     return result;
   }
 
-  /**  Get aggregation result limited to {@code maxRows} rows. */
+  /// Get aggregation result limited to `maxRows` rows.
   public List<Object[]> getResult(int maxRows) {
     int numGroups = Math.min(_groupIdGenerator.getNumGroups(), maxRows);
     if (numGroups == 0) {
-      return Collections.emptyList();
+      return List.of();
     }
 
     List<Object[]> rows = new ArrayList<>(numGroups);
@@ -395,18 +390,8 @@ public class MultistageGroupByExecutor {
           mergedResults = (Comparable[]) _mergeResultHolder.get(groupByKey);
         }
         for (int j = 0; j < numFunctions; j++) {
-          AggregationFunction aggFunction = _aggFunctions[j];
           Comparable finalResult = (Comparable) intermediateResults[j][i];
-          // Not all V1 aggregation functions have null-handling logic. Handle null values before calling merge.
-          // TODO: Fix it
-          if (finalResult == null) {
-            continue;
-          }
-          if (mergedResults[j] == null) {
-            mergedResults[j] = finalResult;
-          } else {
-            mergedResults[j] = aggFunction.mergeFinalResult(mergedResults[j], finalResult);
-          }
+          mergedResults[j] = AggregationFunctionUtils.mergeFinalResult(_aggFunctions[j], mergedResults[j], finalResult);
         }
       }
     } else {
@@ -423,27 +408,15 @@ public class MultistageGroupByExecutor {
           mergedResults = _mergeResultHolder.get(groupByKey);
         }
         for (int j = 0; j < numFunctions; j++) {
-          AggregationFunction aggFunction = _aggFunctions[j];
-          Object intermediateResult = intermediateResults[j][i];
-          // Not all V1 aggregation functions have null-handling logic. Handle null values before calling merge.
-          // TODO: Fix it
-          if (intermediateResult == null) {
-            continue;
-          }
-          if (mergedResults[j] == null) {
-            mergedResults[j] = intermediateResult;
-          } else {
-            mergedResults[j] = aggFunction.merge(mergedResults[j], intermediateResult);
-          }
+          mergedResults[j] =
+              AggregationFunctionUtils.merge(_aggFunctions[j], mergedResults[j], intermediateResults[j][i]);
         }
       }
     }
   }
 
-  /**
-   * Creates the group by key for each row. Converts the key into a 0-index based int value that can be used by
-   * GroupByAggregationResultHolders used in v1 aggregations.
-   */
+  /// Creates the group by key for each row. Converts the key into a 0-index based int value that can be used by
+  /// GroupByAggregationResultHolders used in v1 aggregations.
   private int[] generateGroupByKeys(MseBlock.Data block) {
     return block.isRowHeap()
         ? generateGroupByKeys(block.asRowHeap().getRows())
@@ -487,10 +460,8 @@ public class MultistageGroupByExecutor {
     return intKeys;
   }
 
-  /**
-   * Creates the group by key for each row. Converts the key into a 0-index based int value that can be used by
-   * GroupByAggregationResultHolders used in v1 aggregations.
-   */
+  /// Creates the group by key for each row. Converts the key into a 0-index based int value that can be used by
+  /// GroupByAggregationResultHolders used in v1 aggregations.
   private int[] generateGroupByKeys(MseBlock.Data block, int numMatchedRows, RoaringBitmap matchedBitmap) {
     return block.isRowHeap()
         ? generateGroupByKeys(block.asRowHeap().getRows(), numMatchedRows, matchedBitmap)
