@@ -19,7 +19,6 @@
 package org.apache.pinot.server.conf;
 
 import java.util.Collection;
-import java.util.Collections;
 import java.util.List;
 import org.apache.pinot.spi.env.PinotConfiguration;
 import org.apache.pinot.spi.utils.CommonConstants;
@@ -28,9 +27,7 @@ import org.apache.pinot.spi.utils.CommonConstants.Helix;
 import static org.apache.pinot.spi.utils.CommonConstants.Server.*;
 
 
-/**
- * The config used for Server.
- */
+/// The config used for Server.
 public class ServerConf {
 
   private final PinotConfiguration _serverConf;
@@ -126,12 +123,10 @@ public class ServerConf {
     return _serverConf.subset(CommonConstants.PINOT_QUERY_SCHEDULER_PREFIX);
   }
 
-  /**
-   * Returns a list of transform function names as defined in the config
-   * @return List of transform functions
-   */
+  /// Returns a list of transform function names as defined in the config
+  /// @return List of transform functions
   public List<String> getTransformFunctions() {
-    return _serverConf.getProperty(CONFIG_OF_TRANSFORM_FUNCTIONS, Collections.emptyList());
+    return _serverConf.getProperty(CONFIG_OF_TRANSFORM_FUNCTIONS, List.of());
   }
 
   public boolean emitTableLevelMetrics() {
@@ -139,7 +134,7 @@ public class ServerConf {
   }
 
   public Collection<String> getAllowedTablesForEmittingMetrics() {
-    return _serverConf.getProperty(CONFIG_OF_ALLOWED_TABLES_FOR_EMITTING_METRICS, Collections.emptyList());
+    return _serverConf.getProperty(CONFIG_OF_ALLOWED_TABLES_FOR_EMITTING_METRICS, List.of());
   }
 
   public String getMetricsPrefix() {
