@@ -28,10 +28,10 @@ import java.time.LocalDate;
 import java.time.LocalTime;
 import java.util.ArrayList;
 import java.util.Arrays;
-import java.util.Collections;
 import java.util.List;
 import java.util.Map;
 import java.util.Objects;
+import java.util.Set;
 import java.util.concurrent.TimeUnit;
 import org.apache.commons.lang3.tuple.Pair;
 import org.apache.pinot.spi.config.table.JsonIndexConfig;
@@ -63,7 +63,7 @@ public class JsonUtilsTest {
       JsonNode jsonNode = JsonUtils.stringToJsonNode("123");
       List<Map<String, String>> flattenedRecords = JsonUtils.flatten(jsonNode, jsonIndexConfig);
       assertEquals(flattenedRecords.size(), 1);
-      assertEquals(flattenedRecords.get(0), Collections.singletonMap("", "123"));
+      assertEquals(flattenedRecords.get(0), Map.of("", "123"));
     }
     {
       JsonNode jsonNode = JsonUtils.stringToJsonNode("[]");
@@ -362,7 +362,7 @@ public class JsonUtilsTest {
       jsonIndexConfig.setMaxLevels(2);
       flattenedRecords = JsonUtils.flatten(jsonNode, jsonIndexConfig);
       assertEquals(flattenedRecords.size(), 1);
-      assertEquals(flattenedRecords.get(0), Collections.singletonMap(".name", "adam"));
+      assertEquals(flattenedRecords.get(0), Map.of(".name", "adam"));
 
       jsonIndexConfig.setMaxLevels(1);
       assertEquals(JsonUtils.flatten(jsonNode, jsonIndexConfig), flattenedRecords);
@@ -442,12 +442,12 @@ public class JsonUtilsTest {
             + "\"office\"]}," + "{\"country\":\"ca\",\"street\":\"second st\"}]}");
 
     JsonIndexConfig jsonIndexConfig = new JsonIndexConfig();
-    jsonIndexConfig.setIncludePaths(Collections.singleton("$.name"));
+    jsonIndexConfig.setIncludePaths(Set.of("$.name"));
     List<Map<String, String>> flattenedRecords = JsonUtils.flatten(jsonNode, jsonIndexConfig);
     assertEquals(flattenedRecords.size(), 1);
-    assertEquals(flattenedRecords.get(0), Collections.singletonMap(".name", "charles"));
+    assertEquals(flattenedRecords.get(0), Map.of(".name", "charles"));
 
-    jsonIndexConfig.setIncludePaths(Collections.singleton("$.addresses"));
+    jsonIndexConfig.setIncludePaths(Set.of("$.addresses"));
     flattenedRecords = JsonUtils.flatten(jsonNode, jsonIndexConfig);
     assertEquals(flattenedRecords.size(), 3);
     Map<String, String> flattenedRecord0 = flattenedRecords.get(0);
@@ -470,10 +470,10 @@ public class JsonUtilsTest {
     assertEquals(flattenedRecord2.get(".addresses..country"), "ca");
     assertEquals(flattenedRecord2.get(".addresses..street"), "second st");
 
-    jsonIndexConfig.setIncludePaths(Collections.singleton("$.addresses[*]"));
+    jsonIndexConfig.setIncludePaths(Set.of("$.addresses[*]"));
     assertEquals(JsonUtils.flatten(jsonNode, jsonIndexConfig), flattenedRecords);
 
-    jsonIndexConfig.setIncludePaths(Collections.singleton("$.addresses[*].types"));
+    jsonIndexConfig.setIncludePaths(Set.of("$.addresses[*].types"));
     flattenedRecords = JsonUtils.flatten(jsonNode, jsonIndexConfig);
     assertEquals(flattenedRecords.size(), 2);
     flattenedRecord0 = flattenedRecords.get(0);
@@ -503,7 +503,7 @@ public class JsonUtilsTest {
     assertEquals(flattenedRecord1.get(".addresses..types.$index"), "1");
     assertEquals(flattenedRecord1.get(".addresses..types."), "office");
 
-    jsonIndexConfig.setIncludePaths(Collections.singleton("$.no_match"));
+    jsonIndexConfig.setIncludePaths(Set.of("$.no_match"));
     flattenedRecords = JsonUtils.flatten(jsonNode, jsonIndexConfig);
     assertTrue(flattenedRecords.isEmpty());
   }
@@ -519,10 +519,10 @@ public class JsonUtilsTest {
     jsonIndexConfig.setExcludeArray(true);
     List<Map<String, String>> flattenedRecords = JsonUtils.flatten(jsonNode, jsonIndexConfig);
     assertEquals(flattenedRecords.size(), 1);
-    assertEquals(flattenedRecords.get(0), Collections.singletonMap(".name", "charles"));
+    assertEquals(flattenedRecords.get(0), Map.of(".name", "charles"));
 
     jsonIndexConfig = new JsonIndexConfig();
-    jsonIndexConfig.setExcludePaths(Collections.singleton("$.name"));
+    jsonIndexConfig.setExcludePaths(Set.of("$.name"));
     flattenedRecords = JsonUtils.flatten(jsonNode, jsonIndexConfig);
     assertEquals(flattenedRecords.size(), 3);
     Map<String, String> flattenedRecord0 = flattenedRecords.get(0);
@@ -545,21 +545,21 @@ public class JsonUtilsTest {
     assertEquals(flattenedRecord2.get(".addresses..country"), "ca");
     assertEquals(flattenedRecord2.get(".addresses..street"), "second st");
 
-    jsonIndexConfig.setExcludePaths(Collections.singleton("$.addresses"));
+    jsonIndexConfig.setExcludePaths(Set.of("$.addresses"));
     flattenedRecords = JsonUtils.flatten(jsonNode, jsonIndexConfig);
     assertEquals(flattenedRecords.size(), 1);
-    assertEquals(flattenedRecords.get(0), Collections.singletonMap(".name", "charles"));
+    assertEquals(flattenedRecords.get(0), Map.of(".name", "charles"));
 
-    jsonIndexConfig.setExcludePaths(Collections.singleton("$.addresses[*]"));
+    jsonIndexConfig.setExcludePaths(Set.of("$.addresses[*]"));
     flattenedRecords = JsonUtils.flatten(jsonNode, jsonIndexConfig);
     assertEquals(flattenedRecords.size(), 1);
-    assertEquals(flattenedRecords.get(0), Collections.singletonMap(".name", "charles"));
+    assertEquals(flattenedRecords.get(0), Map.of(".name", "charles"));
 
     jsonIndexConfig = new JsonIndexConfig();
-    jsonIndexConfig.setExcludeFields(Collections.singleton("addresses"));
+    jsonIndexConfig.setExcludeFields(Set.of("addresses"));
     flattenedRecords = JsonUtils.flatten(jsonNode, jsonIndexConfig);
     assertEquals(flattenedRecords.size(), 1);
-    assertEquals(flattenedRecords.get(0), Collections.singletonMap(".name", "charles"));
+    assertEquals(flattenedRecords.get(0), Map.of(".name", "charles"));
   }
 
   @Test
@@ -599,7 +599,7 @@ public class JsonUtilsTest {
 
     // unnest collection entries
     inferredPinotSchema =
-        JsonUtils.getPinotSchemaFromJsonFile(file, fieldSpecMap, TimeUnit.HOURS, Collections.singletonList("entries"),
+        JsonUtils.getPinotSchemaFromJsonFile(file, fieldSpecMap, TimeUnit.HOURS, List.of("entries"),
             ".", ComplexTypeConfig.CollectionNotUnnestedToJson.NON_PRIMITIVE);
     expectedSchema = new Schema.SchemaBuilder().addSingleValueDimension("d1", FieldSpec.DataType.STRING)
         .addMetric("m1", FieldSpec.DataType.INT)
@@ -613,7 +613,7 @@ public class JsonUtilsTest {
 
     // change delimiter
     inferredPinotSchema =
-        JsonUtils.getPinotSchemaFromJsonFile(file, fieldSpecMap, TimeUnit.HOURS, Collections.singletonList(""), "_",
+        JsonUtils.getPinotSchemaFromJsonFile(file, fieldSpecMap, TimeUnit.HOURS, List.of(""), "_",
             ComplexTypeConfig.CollectionNotUnnestedToJson.NON_PRIMITIVE);
     expectedSchema = new Schema.SchemaBuilder().addSingleValueDimension("d1", FieldSpec.DataType.STRING)
         .addMetric("m1", FieldSpec.DataType.INT)
@@ -626,7 +626,7 @@ public class JsonUtilsTest {
 
     // change the handling of collection-to-json option, d2 will become string
     inferredPinotSchema =
-        JsonUtils.getPinotSchemaFromJsonFile(file, fieldSpecMap, TimeUnit.HOURS, Collections.singletonList("entries"),
+        JsonUtils.getPinotSchemaFromJsonFile(file, fieldSpecMap, TimeUnit.HOURS, List.of("entries"),
             ".", ComplexTypeConfig.CollectionNotUnnestedToJson.ALL);
     expectedSchema = new Schema.SchemaBuilder().addSingleValueDimension("d1", FieldSpec.DataType.STRING)
         .addMetric("m1", FieldSpec.DataType.INT)
@@ -673,11 +673,11 @@ public class JsonUtilsTest {
       List<Map<String, String>> flattenedRecords = JsonUtils.flatten(jsonNode, jsonIndexConfig);
 
       // flatten everything within 2 layers
-      jsonIndexConfig.setIndexPaths(Collections.singleton("*.*"));
+      jsonIndexConfig.setIndexPaths(Set.of("*.*"));
       assertEquals(JsonUtils.flatten(jsonNode, jsonIndexConfig), flattenedRecords);
 
       // flatten "a." prefix till 2 layers
-      jsonIndexConfig.setIndexPaths(Collections.singleton("a.*"));
+      jsonIndexConfig.setIndexPaths(Set.of("a.*"));
       flattenedRecords = JsonUtils.flatten(jsonNode, jsonIndexConfig);
       assertTrue(flattenedRecords.isEmpty());
     }
@@ -706,11 +706,11 @@ public class JsonUtilsTest {
       List<Map<String, String>> flattenedRecords = JsonUtils.flatten(jsonNode, jsonIndexConfig);
 
       // flatten everything
-      jsonIndexConfig.setIndexPaths(Collections.singleton("**"));
+      jsonIndexConfig.setIndexPaths(Set.of("**"));
       assertEquals(JsonUtils.flatten(jsonNode, jsonIndexConfig), flattenedRecords);
 
       // flatten everything within 3 layers
-      jsonIndexConfig.setIndexPaths(Collections.singleton("*.*.*"));
+      jsonIndexConfig.setIndexPaths(Set.of("*.*.*"));
       assertEquals(JsonUtils.flatten(jsonNode, jsonIndexConfig), flattenedRecords);
 
       // flatten "name" 1 layer and "addresses" infinite layers
@@ -718,13 +718,13 @@ public class JsonUtilsTest {
       assertEquals(JsonUtils.flatten(jsonNode, jsonIndexConfig), flattenedRecords);
 
       // flatten everything within 2 layers
-      jsonIndexConfig.setIndexPaths(Collections.singleton("*.*"));
+      jsonIndexConfig.setIndexPaths(Set.of("*.*"));
       flattenedRecords = JsonUtils.flatten(jsonNode, jsonIndexConfig);
       assertEquals(flattenedRecords.size(), 1);
-      assertEquals(flattenedRecords.get(0), Collections.singletonMap(".name", "adam"));
+      assertEquals(flattenedRecords.get(0), Map.of(".name", "adam"));
 
       // flatten "name." prefix with infinite layers
-      jsonIndexConfig.setIndexPaths(Collections.singleton("name.**"));
+      jsonIndexConfig.setIndexPaths(Set.of("name.**"));
       assertEquals(JsonUtils.flatten(jsonNode, jsonIndexConfig), flattenedRecords);
     }
     {
@@ -751,11 +751,11 @@ public class JsonUtilsTest {
       List<Map<String, String>> flattenedRecords = JsonUtils.flatten(jsonNode, jsonIndexConfig);
 
       // flatten everything
-      jsonIndexConfig.setIndexPaths(Collections.singleton("*.*.**"));
+      jsonIndexConfig.setIndexPaths(Set.of("*.*.**"));
       assertEquals(JsonUtils.flatten(jsonNode, jsonIndexConfig), flattenedRecords);
 
       // flatten addresses array with one more layer
-      jsonIndexConfig.setIndexPaths(Collections.singleton("addresses..*"));
+      jsonIndexConfig.setIndexPaths(Set.of("addresses..*"));
       flattenedRecords = JsonUtils.flatten(jsonNode, jsonIndexConfig);
       assertEquals(flattenedRecords.size(), 2);
       Map<String, String> flattenedRecord0 = flattenedRecords.get(0);
@@ -775,9 +775,7 @@ public class JsonUtilsTest {
   // These tests verify that bytesToMap produces identical results to the old
   // two-step approach (bytesToJsonNode + jsonNodeToMap)
 
-  /**
-   * Data provider for various JSON payloads to test bytesToMap equivalence
-   */
+  /// Data provider for various JSON payloads to test bytesToMap equivalence
   @DataProvider(name = "jsonPayloads")
   public Object[][] jsonPayloads() {
     return new Object[][]{
@@ -867,10 +865,8 @@ public class JsonUtilsTest {
     };
   }
 
-  /**
-   * Test that bytesToMap produces identical results to bytesToJsonNode + jsonNodeToMap
-   * for all payload types
-   */
+  /// Test that bytesToMap produces identical results to bytesToJsonNode + jsonNodeToMap
+  /// for all payload types
   @Test(dataProvider = "jsonPayloads")
   public void testBytesToMapEquivalence(String jsonString)
       throws IOException {
@@ -888,9 +884,7 @@ public class JsonUtilsTest {
         "bytesToMap should produce identical result to bytesToJsonNode + jsonNodeToMap for: " + jsonString);
   }
 
-  /**
-   * Test bytesToMap with offset and length parameters (partial array reading)
-   */
+  /// Test bytesToMap with offset and length parameters (partial array reading)
   @Test
   public void testBytesToMapWithOffset()
       throws IOException {
@@ -915,10 +909,8 @@ public class JsonUtilsTest {
     assertEquals(newResult.get("num"), 42);
   }
 
-  /**
-   * Test bytesToMap with offset where offset + length would exceed array bounds.
-   * This test ensures we're passing length (not offset+length) to Jackson API.
-   */
+  /// Test bytesToMap with offset where offset + length would exceed array bounds.
+  /// This test ensures we're passing length (not offset+length) to Jackson API.
   @Test
   public void testBytesToMapWithOffsetEdgeCase()
       throws IOException {
@@ -950,9 +942,7 @@ public class JsonUtilsTest {
     assertEquals(result, oldResult);
   }
 
-  /**
-   * Test bytesToMap with various offset positions to ensure correct slicing.
-   */
+  /// Test bytesToMap with various offset positions to ensure correct slicing.
   @Test
   public void testBytesToMapWithVariousOffsets()
       throws IOException {
@@ -980,9 +970,7 @@ public class JsonUtilsTest {
     }
   }
 
-  /**
-   * Test bytesToMap without offset (full array)
-   */
+  /// Test bytesToMap without offset (full array)
   @Test
   public void testBytesToMapFullArray()
       throws IOException {
@@ -999,9 +987,7 @@ public class JsonUtilsTest {
     assertEquals(newResult, oldResult);
   }
 
-  /**
-   * Test that numeric types are preserved correctly
-   */
+  /// Test that numeric types are preserved correctly
   @Test
   public void testBytesToMapNumericTypes()
       throws IOException {
@@ -1022,9 +1008,7 @@ public class JsonUtilsTest {
     assertEquals(result, oldResult);
   }
 
-  /**
-   * Test nested object access after parsing
-   */
+  /// Test nested object access after parsing
   @Test
   @SuppressWarnings("unchecked")
   public void testBytesToMapNestedAccess()
@@ -1046,9 +1030,7 @@ public class JsonUtilsTest {
     assertEquals(result, oldResult);
   }
 
-  /**
-   * Test null handling in bytesToMap
-   */
+  /// Test null handling in bytesToMap
   @Test
   public void testBytesToMapNullHandling()
       throws IOException {
@@ -1071,9 +1053,7 @@ public class JsonUtilsTest {
     assertEquals(result, oldResult);
   }
 
-  /**
-   * Test boolean handling
-   */
+  /// Test boolean handling
   @Test
   public void testBytesToMapBooleanHandling()
       throws IOException {
@@ -1091,9 +1071,7 @@ public class JsonUtilsTest {
     assertEquals(result, oldResult);
   }
 
-  /**
-   * Test empty object and array
-   */
+  /// Test empty object and array
   @Test
   public void testBytesToMapEmptyStructures()
       throws IOException {
@@ -1116,9 +1094,7 @@ public class JsonUtilsTest {
     assertEquals(result, oldResult);
   }
 
-  /**
-   * Test that the method correctly handles UTF-8 encoded bytes
-   */
+  /// Test that the method correctly handles UTF-8 encoded bytes
   @Test
   public void testBytesToMapUtf8Encoding()
       throws IOException {
@@ -1141,9 +1117,7 @@ public class JsonUtilsTest {
     assertEquals(result, oldResult);
   }
 
-  /**
-   * Test escape sequences in strings
-   */
+  /// Test escape sequences in strings
   @Test
   public void testBytesToMapEscapeSequences()
       throws IOException {
@@ -1166,9 +1140,7 @@ public class JsonUtilsTest {
     assertEquals(result, oldResult);
   }
 
-  /**
-   * Test mixed type arrays
-   */
+  /// Test mixed type arrays
   @Test
   public void testBytesToMapMixedArrays()
       throws IOException {
@@ -1192,9 +1164,7 @@ public class JsonUtilsTest {
     assertEquals(result, oldResult);
   }
 
-  /**
-   * Test error handling - malformed JSON should throw IOException
-   */
+  /// Test error handling - malformed JSON should throw IOException
   @Test(expectedExceptions = IOException.class)
   public void testBytesToMapMalformedJson()
       throws IOException {
@@ -1203,9 +1173,7 @@ public class JsonUtilsTest {
     JsonUtils.bytesToMap(jsonBytes);
   }
 
-  /**
-   * Test error handling - incomplete JSON
-   */
+  /// Test error handling - incomplete JSON
   @Test(expectedExceptions = IOException.class)
   public void testBytesToMapIncompleteJson()
       throws IOException {
@@ -1214,9 +1182,7 @@ public class JsonUtilsTest {
     JsonUtils.bytesToMap(jsonBytes);
   }
 
-  /**
-   * Stress test with a large number of fields
-   */
+  /// Stress test with a large number of fields
   @Test
   public void testBytesToMapManyFields()
       throws IOException {
@@ -1246,9 +1212,7 @@ public class JsonUtilsTest {
     }
   }
 
-  /**
-   * Test with a deeply nested array structure
-   */
+  /// Test with a deeply nested array structure
   @Test
   public void testBytesToMapDeeplyNestedArrays()
       throws IOException {
